{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 12,
  "lineage": "db3242d1-ee70-b916-6d87-319b23360b9c",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "kops_node_secgrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:064814169464:security-group/sg-0b6586dea90e65789",
            "description": "Security group for nodes",
            "filter": null,
            "id": "sg-0b6586dea90e65789",
            "name": "nodes.kopsdemo.k8s.local",
            "tags": {
              "KubernetesCluster": "kopsdemo.k8s.local",
              "Name": "nodes.kopsdemo.k8s.local",
              "kubernetes.io/cluster/kopsdemo.k8s.local": "owned"
            },
            "vpc_id": "vpc-0cb945047b5dac62a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "kops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:064814169464:vpc/vpc-0cb945047b5dac62a",
            "cidr_block": "172.20.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a8fbd96aa7e3231d",
                "cidr_block": "172.20.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-05fd3a427a5c277eb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cb945047b5dac62a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-038ece1e77dcb5357",
            "owner_id": "064814169464",
            "state": "available",
            "tags": {
              "KubernetesCluster": "kopsdemo.k8s.local",
              "Name": "kopsdemo.k8s.local",
              "kubernetes.io/cluster/kopsdemo.k8s.local": "owned"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs-target-eks-volumes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:064814169464:security-group/sg-0ee4b09b43c2843ff",
            "description": "Allows NFS traffic from instances within the VPC.",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b6586dea90e65789"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "id": "sg-0ee4b09b43c2843ff",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b6586dea90e65789"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-target-eks-volumes",
            "name_prefix": "",
            "owner_id": "064814169464",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cb945047b5dac62a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.kops_node_secgrp",
            "data.aws_vpc.kops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "storage",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "storage",
            "metadata": [
              {
                "generation": 0,
                "name": "storage",
                "resource_version": "8874",
                "uid": "87eaac24-312b-4e98-ab84-5be6ea1bc8b7"
              }
            ]
          }
        }
      ]
    }
  ]
}